# pimpmyrice_server

./: README.md  flake.nix  pyproject.toml  reload_on_change.sh  setup.py
.github/workflows/: release.yaml
packaging/: pyinstaller.spec
packaging/windows/: inno_setup.iss
src/pimpmyrice_server/: __main__.py  api.py  cli.py  files.py  tray.py
