[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pimpmyrice_server"
version = "0.1.0"
description = "Server for PimpMyRice"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "daddodev", email = "daddodev@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "pimpmyrice",
    "fastapi",
    "uvicorn[standard]",
    "docopt",
    "requests",
    "watchdog",
    "pystray",
    "psutil",
]

[project.urls]
Homepage = "https://github.com/daddodev/pimpmyrice_server"
"Bug Tracker" = "https://github.com/daddodev/pimpmyrice_server/issues"

[project.optional-dependencies]
dev = [
    "python-lsp-server",
    "ruff",
    "mypy",
    "isort",
    "pytest",
    "pytest-asyncio",
    "types-requests",
    "types-PyYAML",
]

[project.scripts]
pimp-server = "pimpmyrice_server.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pimpmyrice_server = ["assets/pimp.ico"]



[tool.ruff]
target-version = "py310"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "F401",
    "F841",
    "F821",
    "ARG001",
    "ARG002",
    "ARG003",
    "ARG004",
    "ARG005",
]
ignore = [
    "E741"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict = true

[tool.isort]
profile = "black"